tests/ui/raw_string_semantic_ids.stderr
error[E0277]: the trait bound `GuardId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:40:34
   |
40 |         registrar.register_guard("api", DummyGuard)?;
   |                   -------------- ^^^^^ the trait `From<&str>` is not implemented for `GuardId`
   |                   |
   |                   required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<GuardId>`
note: required by a bound in `foundry::ServiceRegistrar::register_guard`
  --> src/foundation/provider.rs
   |
   |     pub fn register_guard<I, G>(&self, id: I, guard: G) -> Result<()>
   |            -------------- required by a bound in this associated function
   |     where
   |         I: Into<GuardId>,
   |            ^^^^^^^^^^^^^ required by this bound in `ServiceRegistrar::register_guard`

error[E0277]: the trait bound `PolicyId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:41:35
   |
41 |         registrar.register_policy("is_admin", DummyPolicy)?;
   |                   --------------- ^^^^^^^^^^ the trait `From<&str>` is not implemented for `PolicyId`
   |                   |
   |                   required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<PolicyId>`
note: required by a bound in `foundry::ServiceRegistrar::register_policy`
  --> src/foundation/provider.rs
   |
   |     pub fn register_policy<I, P>(&self, id: I, policy: P) -> Result<()>
   |            --------------- required by a bound in this associated function
   |     where
   |         I: Into<PolicyId>,
   |            ^^^^^^^^^^^^^^ required by this bound in `ServiceRegistrar::register_policy`

error[E0277]: the trait bound `MiddlewareGroupId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:48:29
   |
48 |     let _ = groups.register("api", Vec::new());
   |                    -------- ^^^^^ the trait `From<&str>` is not implemented for `MiddlewareGroupId`
   |                    |
   |                    required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<MiddlewareGroupId>`
note: required by a bound in `foundry::MiddlewareGroups::register`
  --> src/http/middleware.rs
   |
   |     pub fn register<I>(&mut self, id: I, middlewares: Vec<MiddlewareConfig>) -> Result<()>
   |            -------- required by a bound in this associated function
   |     where
   |         I: Into<MiddlewareGroupId>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `MiddlewareGroups::register`

error[E0277]: the trait bound `MiddlewareGroupId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:49:28
   |
49 |     scope.middleware_group("api");
   |           ---------------- ^^^^^ the trait `From<&str>` is not implemented for `MiddlewareGroupId`
   |           |
   |           required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<MiddlewareGroupId>`
note: required by a bound in `foundry::HttpScope::<'a>::middleware_group`
  --> src/http/mod.rs
   |
   |     pub fn middleware_group<I>(&mut self, id: I) -> &mut Self
   |            ---------------- required by a bound in this associated function
   |     where
   |         I: Into<MiddlewareGroupId>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `HttpScope::<'a>::middleware_group`

error[E0277]: the trait bound `MiddlewareGroupId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:50:28
   |
50 |     route.middleware_group("api");
   |           ---------------- ^^^^^ the trait `From<&str>` is not implemented for `MiddlewareGroupId`
   |           |
   |           required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<MiddlewareGroupId>`
note: required by a bound in `foundry::HttpRouteBuilder::middleware_group`
  --> src/http/mod.rs
   |
   |     pub fn middleware_group<I>(&mut self, id: I) -> &mut Self
   |            ---------------- required by a bound in this associated function
   |     where
   |         I: Into<MiddlewareGroupId>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `HttpRouteBuilder::middleware_group`

error[E0277]: the trait bound `ValidationRuleId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:56:35
   |
56 |         .register_validation_rule("mobile", DummyRule)
   |          ------------------------ ^^^^^^^^ the trait `From<&str>` is not implemented for `ValidationRuleId`
   |          |
   |          required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<ValidationRuleId>`
note: required by a bound in `AppBuilder::register_validation_rule`
  --> src/foundation/app.rs
   |
   |     pub fn register_validation_rule<I, R>(mut self, id: I, rule: R) -> Self
   |            ------------------------ required by a bound in this associated function
   |     where
   |         I: Into<ValidationRuleId>,
   |            ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AppBuilder::register_validation_rule`

error[E0277]: the trait bound `MiddlewareGroupId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:57:27
   |
57 |         .middleware_group("api", Vec::new());
   |          ---------------- ^^^^^ the trait `From<&str>` is not implemented for `MiddlewareGroupId`
   |          |
   |          required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<MiddlewareGroupId>`
note: required by a bound in `AppBuilder::middleware_group`
  --> src/foundation/app.rs
   |
   |     pub fn middleware_group<I>(mut self, id: I, middlewares: Vec<MiddlewareConfig>) -> Self
   |            ---------------- required by a bound in this associated function
   |     where
   |         I: Into<MiddlewareGroupId>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AppBuilder::middleware_group`

error[E0277]: the trait bound `GuardId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:60:16
   |
60 |         .guard("api")
   |          ----- ^^^^^ the trait `From<&str>` is not implemented for `GuardId`
   |          |
   |          required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<GuardId>`
note: required by a bound in `foundry::HttpRouteOptions::guard`
  --> src/http/mod.rs
   |
   |     pub fn guard<I>(mut self, guard: I) -> Self
   |            ----- required by a bound in this associated function
   |     where
   |         I: Into<GuardId>,
   |            ^^^^^^^^^^^^^ required by this bound in `HttpRouteOptions::guard`

error[E0277]: the trait bound `PermissionId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:61:21
   |
61 |         .permission("reports:view")
   |          ---------- ^^^^^^^^^^^^^^ the trait `From<&str>` is not implemented for `PermissionId`
   |          |
   |          required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<PermissionId>`
note: required by a bound in `foundry::HttpRouteOptions::permission`
  --> src/http/mod.rs
   |
   |     pub fn permission<I>(mut self, permission: I) -> Self
   |            ---------- required by a bound in this associated function
   |     where
   |         I: Into<PermissionId>,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `HttpRouteOptions::permission`

error[E0277]: the trait bound `MiddlewareGroupId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:62:27
   |
62 |         .middleware_group("api");
   |          ---------------- ^^^^^ the trait `From<&str>` is not implemented for `MiddlewareGroupId`
   |          |
   |          required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<MiddlewareGroupId>`
note: required by a bound in `foundry::HttpRouteOptions::middleware_group`
  --> src/http/mod.rs
   |
   |     pub fn middleware_group<I>(mut self, id: I) -> Self
   |            ---------------- required by a bound in this associated function
   |     where
   |         I: Into<MiddlewareGroupId>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `HttpRouteOptions::middleware_group`

error[E0277]: the trait bound `GuardId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:65:16
   |
65 |         .guard("api")
   |          ----- ^^^^^ the trait `From<&str>` is not implemented for `GuardId`
   |          |
   |          required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<GuardId>`
note: required by a bound in `foundry::WebSocketChannelOptions::guard`
  --> src/websocket/mod.rs
   |
   |     pub fn guard<I>(mut self, guard: I) -> Self
   |            ----- required by a bound in this associated function
   |     where
   |         I: Into<GuardId>,
   |            ^^^^^^^^^^^^^ required by this bound in `WebSocketChannelOptions::guard`

error[E0277]: the trait bound `PermissionId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:66:21
   |
66 |         .permission("ws:chat");
   |          ---------- ^^^^^^^^^ the trait `From<&str>` is not implemented for `PermissionId`
   |          |
   |          required by a bound introduced by this call
   |
   = note: required for `&str` to implement `Into<PermissionId>`
note: required by a bound in `foundry::WebSocketChannelOptions::permission`
  --> src/websocket/mod.rs
   |
   |     pub fn permission<I>(mut self, permission: I) -> Self
   |            ---------- required by a bound in this associated function
   |     where
   |         I: Into<PermissionId>,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `WebSocketChannelOptions::permission`

error[E0277]: the trait bound `CommandId: From<foundry::prelude::Command>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:70:9
   |
69 |     let _ = commands.command(
   |                      ------- required by a bound introduced by this call
70 |         Command::new("hello"),
   |         ^^^^^^^^^^^^^^^^^^^^^ the trait `From<foundry::prelude::Command>` is not implemented for `CommandId`
   |
   = note: required for `foundry::prelude::Command` to implement `Into<CommandId>`
note: required by a bound in `foundry::CommandRegistry::command`
  --> src/cli/mod.rs
   |
   |     pub fn command<I, F, Fut>(&mut self, id: I, command: Command, handler: F) -> Result<&mut Self>
   |            ------- required by a bound in this associated function
   |     where
   |         I: Into<CommandId>,
   |            ^^^^^^^^^^^^^^^ required by this bound in `CommandRegistry::command`

error[E0061]: this method takes 3 arguments but 2 arguments were supplied
  --> tests/ui/raw_string_semantic_ids.rs:69:22
   |
69 |     let _ = commands.command(
   |                      ^^^^^^^
70 |         Command::new("hello"),
71 |         |_invocation: CommandInvocation| async { Ok(()) },
   |         ------------------------------------------------- argument #2 of type `foundry::prelude::Command` is missing
   |
note: method defined here
  --> src/cli/mod.rs
   |
   |     pub fn command<I, F, Fut>(&mut self, id: I, command: Command, handler: F) -> Result<&mut Self>
   |            ^^^^^^^
help: provide the argument
   |
69 |     let _ = commands.command(
70 |         Command::new("hello"),
71 ~         /* foundry::prelude::Command */,
72 ~         |_invocation: CommandInvocation| async { Ok(()) },
   |

error[E0277]: the trait bound `ScheduleId: From<&str>` is not satisfied
  --> tests/ui/raw_string_semantic_ids.rs:76:9
   |
75 |     let _ = schedules.cron(
   |                       ---- required by a bound introduced by this call
76 |         "heartbeat",
   |         ^^^^^^^^^^^ the trait `From<&str>` is not implemented for `ScheduleId`
   |
   = note: required for `&str` to implement `Into<ScheduleId>`
note: required by a bound in `foundry::ScheduleRegistry::cron`
  --> src/scheduler/mod.rs
   |
   |     pub fn cron<I, F, Fut>(
   |            ---- required by a bound in this associated function
...
   |         I: Into<ScheduleId>,
   |            ^^^^^^^^^^^^^^^^ required by this bound in `ScheduleRegistry::cron`
